fix: Spacing between Transaction Summary and Amount

--- a/src/app/modules/logbookPage/logbookPage.scss
+++ b/src/app/modules/logbookPage/logbookPage.scss
@@ -36,7 +36,6 @@
         border-bottom: 1px solid rgba(0,0,0,0.12);
         a {
           line-height: 64px;
-          display: block;
           padding: 0 24px;
           color: rgba(0,0,0,0.87);
           text-decoration: none;
